fix: adjusted mat-card height for better spacing

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-list/appointment-list.component.scss
@@ -10,7 +10,7 @@
 mat-card {
   margin: 0.5em;
   padding: 1em;
-  height: 10em;
+  height: 10.5em;
 
   p {
     height: 2.75em;
